:bug: Fixes setting popup triangle overflow

--- a/src/styles/Settings.scss
+++ b/src/styles/Settings.scss
@@ -25,13 +25,28 @@
         height: 100%;
     }
 
+    .settings-popup-triangle {
+        width: 30px;
+        height: 30px;
+
+        position: absolute;
+
+        // WE NEED PIXELS HERE - or it might overflow
+        margin-top: 5px;
+        margin-left: 32px;
+
+        border-left: 1px solid black;
+        border-top: 1px solid black;
+
+        transform: rotate(45deg);
+    }
+
     .settings-popup {
         position: absolute;
-        z-index: 2;
         background-color: white;
 
         border: 1px solid black;
-        margin-top: 25%;
+        margin-top: 20%;
 
         @media only screen and (min-width: 200px) {
             width: 50vw;
@@ -46,24 +61,6 @@
             width: 18vw;
         }
         min-height: 0;
-
-        // TODO: fix overflow
-        .popup-triangle {
-            width: 30px;
-            height: 30px;
-
-            position: absolute;
-
-            margin-top: -4.7%;
-            margin-left: 9.2%;
-
-            border-left: 1px solid black;
-            border-top: 1px solid black;
-
-            transform: rotate(45deg);
-
-            z-index: 0;
-        }
 
         .logout-button {
             float: right;
